Aarch64: C2 compilation often fails with "failed spill-split-recycle sanity check"

XMLWordPrintable

    • b178
    • aarch64
    • Not verified

        COMPILE SKIPPED: failed spill-split-recycle sanity check (not retryable)

        happens even when simply running:

        jdk9-dev/build/linux-aarch64-normal-server-slowdebug/jdk/bin/java -XX:+PrintCompilation -XX:-TieredCompilation

              Assignee:
              Roland Westrelin
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: