8183543: Aarch64: C2 compilation often fails with "failed spill-split-recycle sanity check"

Reviewed-by: aph